--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 
   <footer class="site-footer">
-    <p> &copy; 2023 Fake Adoption Center. All rights reserved.</p>
+    <p> &copy; 2023 Fake Adoption Center. All rights reserved!!!</p>
   </footer>
 </body>
 
