turned pet card into js template

--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
         <p>show me: <button>All Pets</button><button>Only Dogs</button><button>Only Cats</button></p>
       </div>
 
-      <div class="list-of-pets">
+      <div class="list-of-pets"></div>
+
+      <template id="pet-card-template">
         <div class="pet-card">
           <div class="pet-card-text">
-            <h3>Barksalot</h3>
+            <h3></h3>
             <p class="pet-discription">Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots,
               celery, and playing fetch.
             </p>
@@ -133,44 +135,8 @@
           <div class="pet-card-photo">
             <img src="images/dog.jpg" alt="A white fluffy dog named jack">
           </div>
-        </div><!--end of pet card-->
-        <div class="pet-card">
-          <div class="pet-card-text">
-            <h3>Meowsalot</h3>
-            <p class="pet-discription">Meowsalot is the most talkative cat we&rsquo;ve ever come across. Constant
-              meowing, chirping and purring!
-            </p>
-            <p class="pet-age">1 Year Old</p>
-          </div>
-          <div class="pet-card-photo">
-            <img src="images/Meowsalot.jpg" alt="A Cat">
-          </div>
-        </div><!--end of pet card-->
-        <div class="pet-card">
-          <div class="pet-card-text">
-            <h3>Woof</h3>
-            <p class="pet-discription">Woof is a very talkative and sweet pup. She loves beets, plums, cuddles and
-              jumping over low fences.
-            </p>
-            <p class="pet-age">Less then a year Old</p>
-          </div>
-          <div class="pet-card-photo">
-            <img src="images/Woof.jpg" alt="A good dog">
-          </div>
-        </div><!--end of pet card-->
-        <div class="pet-card">
-          <div class="pet-card-text">
-            <h3>Purrsloud</h3>
-            <p class="pet-discription">Purrsloud has the loudest and most relaxing purr that&rsquo;s come through our
-              center. Come hear it yourself.
-            </p>
-            <p class="pet-age">4 Year Old</p>
-          </div>
-          <div class="pet-card-photo">
-            <img src="images/Purrsloud.jpg" alt="A old Cat">
-          </div>
-        </div><!--end of pet card-->
-      </div>
+        </div>
+      </template>
     </div>
   </div>
 
