nearly finished pet card feature

--- a/index.html
+++ b/index.html
@@ -127,13 +127,12 @@
         <div class="pet-card">
           <div class="pet-card-text">
             <h3></h3>
-            <p class="pet-discription">Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots,
-              celery, and playing fetch.
+            <p class="pet-description">
             </p>
-            <p class="pet-age">2 Year Old</p>
+            <p class="pet-age"></p>
           </div>
           <div class="pet-card-photo">
-            <img src="images/dog.jpg" alt="A white fluffy dog named jack">
+            <img src="" alt="">
           </div>
         </div>
       </template>
