--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
       <h2 class="page-section-title">Meet Our friends</h2>
 
       <div class="pets-filter">
-        <p>show me: <button class="active pets-filter-button">All Pets</button><button class="pets-filter-button">Only
-            Dogs</button><button class="pets-filter-button">Only Cats</button></p>
+        <p>show me: <button class="active pets-filter-button" data-filter="all">All Pets</button><button
+            class="pets-filter-button" data-filter="dog">Only
+            Dogs</button><button class="pets-filter-button" data-filter="cat">Only Cats</button></p>
       </div>
 
       <div class="list-of-pets"></div>
